Add libsodium backend (signet.impl.sodium) behind a backend facade
signet.impl selects the crypto backend once at load (-Dsignet.backend /
SIGNET_BACKEND, default jca) and forwards the 16 crypto functions to
signet.impl.jvm (JCA) or signet.impl.sodium (libsodium via sodium.cljc /
babashka.ffi). Unknown or unloadable backends fail loudly at load; there
is no silent fallback. key, sign, chain, encryption and session now call
impl/ instead of jvm/.

Results:
- JVM, jca: 102 tests / 436 assertions (unchanged)
- JVM, sodium (-M:test:sodium): 102 / 436, plus backend_parity: 54
  checks, byte-identical to JCA on random inputs
- bb, sodium: 93 / 415, the full suite minus secp256k1. With jca, bb
  errors on 16 tests (the proxy [SecureRandom] seed trick).

New bb tasks test:jvm, test:jvm-sodium, test:bb-sodium; README and
CLAUDE.md document backends and requirements (libsodium >= 1.0.19,
JDK 25+, bb >= 1.13.220). sodium.cljc is a local dependency for now.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01BVvFQP9ZXLXVBqr63vHCyp